# imgui-react-runtime

./: .babelrc.cjs  .gitignore  .npmrc.example  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
cmake/: HermesExternal.cmake  hermes.cmake  react-imgui.cmake
doc/: TODO.md
examples/: CMakeLists.txt
examples/custom-widget/: CMakeLists.txt  app.jsx  custom-widget.cpp  index.jsx
examples/dynamic-windows/: CMakeLists.txt  app.jsx  index.js
examples/hello/: CMakeLists.txt  app.jsx  hello.cpp  index.js
examples/showcase/: BouncingBall.jsx  CMakeLists.txt  ControlledWindow.jsx  StockTable.jsx  app.jsx  index.js
lib/: CMakeLists.txt
lib/imgui-runtime/: CMakeLists.txt  MappedFileBuffer.cpp  MappedFileBuffer.h  imgui-runtime.cpp  imgui-runtime.h
lib/imgui-unit/: CMakeLists.txt  asciiz.js  ffi_helpers.h  ffi_helpers.js  gen_js_externs.sh  js_externs.js  js_externs_cwrap.c  main.js  renderer.js  sapp.js
lib/jslib-unit/: CMakeLists.txt  jslib.js
lib/react-imgui-reconciler/: host-config.js  perf-stats.js  reconciler.js  tree-node.js  tree-printer.js
scripts/: bundle-react-unit.js
