# Copyright (c) Tzvetan Mikov and contributors
# SPDX-License-Identifier: MIT
# See LICENSE file for full license text

# Examples directory - each subdirectory is an example application
add_subdirectory(hello)
add_subdirectory(dynamic-windows)
add_subdirectory(showcase)
add_subdirectory(custom-widget)
